--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,141 @@
-    body{
-			background-color: #000;
-		}
-		.background{
-			width: 100%;
-		}
+
+.inter-bold {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+body {
+    background-color: #000 !important;
+}
+
+.background-container {
+    text-align: center;
+}
+
+.background {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.botev_logo {
+    width: 167px;
+    margin-top:-20px;
+   
+}
+
+.header_text {
+    font-family: Oswald;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.header {
+    padding-top: 50px;
+}
+
+.button-cnt {
+    text-align: center;
+}
+
+.button {
+    cursor: pointer;
+    background-color: #FFCB05;
+    border: none;
+    font-size: 21.6px;
+    width: 306px;
+    font-family: 'Inter';
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 10px;
+    color: #000;
+}
+
+.btn-cnt {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+    .btn-cnt .row {
+        max-width: 1000px;
+    }
+
+.button-text {
+    background-color: #FFCB05;
+}
+
+.p-30 {
+    padding: 30px !important;
+}
+
+.info {
+    background-color: #FFCB05;
+}
+
+.text {
+    font-size: 25px;
+    font-family: 'Inter';
+    color: #fff;
+    padding: 60px;
+}
+
+.y-text {
+    color: #FFCB05 !important;
+}
+
+.b-text {
+    color: #000 !important;
+}
+
+.bold-text {
+    font-weight: bold;
+}
+
+.text-centre {
+    text-align: center;
+}
+
+.w-200 {
+    width: 200px;
+}
+
+.fw-15 {
+    font-size: 15px !important;
+}
+
+.logo-img-cnt {
+    display: inline-block;
+}
+
+@media only screen and (max-width: 1100px) {
+    .button {
+        width: 256px;
+        font-size: 19px;
+    }
+    .w-200 {
+        width: 180px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .button {
+        width: 236px;
+    }
+    .w-200 {
+        width: 180px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .button-cnt {
+        padding: 15px;
+    }
+    .button{
+        width: 300px!important;
+    }
+
+}
