--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,10 @@ body {
     display: inline-block;
 }
 
+.link{
+   color: #fff; 	
+}
+
 @media only screen and (max-width: 1100px) {
     .button {
         width: 256px;
