--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,10 @@ body {
 
 .link{
    color: #fff; 	
+    &:hover {
+     color: #fff; 
+     text-decoration: none; 
+}
 }
 
 @media only screen and (max-width: 1100px) {
