--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body {
    color: #fff; 	
     &:hover {
      color: #fff; 
-     text-decoration: none; 
+     text-decoration: underline; 
 }
 }
 
